...
                                            </mask>
                                        </variation>
                                        <connections>
                                            <action selector="tapToShareButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SXX-pU-4QP"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="AddCurrencyButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2V-26-CYx">
                                        <rect key="frame" x="108" y="450" width="166" height="40"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AddCurrencyButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="166" id="h3y-IQ-U08"/>
                                            <constraint firstAttribute="height" constant="40" id="jkQ-jH-Me3"/>
                                        </constraints>
...
